# PnP.2023.1.AI

./: .gitmodules  pyproject.toml
doc/week4/: week4.md
step2-1/: 1-6.py  3-10.py  3-12.py  3-6.py  3-9.py  4-5.py  4-8.py  4-9.py
step2-2/: 1-10.py  1-2.py  1-3.py  1-4.py  1-5.py  1-7.py  1-9.py  2-4.py  2-5.py  2-7.py  2-8.py  3-3.py  3-4.py  3-5.py  3-6.py  3-7.py
step2-3/: 1-10.py  1-12.py  1-3.py  1-6.py  1-8.py  2-10.py  2-5.py  2-7.py  4-10.ipynb  4-3.ipynb  4-5.ipynb  4-6.ipynb  4-8.py  5-10.py  5-12.py  5-3.py  5-5.py  5-7.py  5-9.py
