[tool.poetry]
name = "ai-studying"
version = "0.1.0"
description = ""
authors = ["jhchoi123 <solid2113@naver.com>"]
readme = "README.md"
packages = [{include = "ai_studying"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
scipy = { version = "^1.10.1", python = "<3.11" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
